fix: make .imprint invisible
make .imprint invisible

--- a/css/03-generic.css
+++ b/css/03-generic.css
@@ -130,7 +130,7 @@ h4 {
 
 /* Remove H1 from home */
 
-body.home header.entry-header {
+body.home header.entry-header, .imprint {
 	position:absolute;
 	left: -10000px;
 	top: auto;
